@@ -2,16 +2,36 @@
 
 plugins {
     application
+    kotlin("jvm") version "1.3.61" apply false
+    id("kotlinx-serialization") version "1.3.61" apply false
 }
 
+apply(plugin = "kotlin")
+apply(plugin = "kotlinx-serialization")
+
+
+tasks.withType<org.jetbrains.kotlin.gradle.tasks.KotlinCompile> {
+    kotlinOptions.apply {
+        jvmTarget = "12"
+        noReflect = true
+        noStdlib = true
+        noJdk = false
+        noReflect = true
+        includeRuntime = false
+        languageVersion = "1.3"
+        apiVersion = "1.3"
+        suppressWarnings = true
+    }
+}
 //region https://docs.gradle.org/current/userguide/kotlin_dsl.html#using_kotlin_delegated_properties
 //val moduleName: String by project
-val run by tasks.existing(JavaExec::class) // https://youtrack.jetbrains.com/issue/KT-28013
+//val run by tasks.existing(JavaExec::class) // https://youtrack.jetbrains.com/issue/KT-28013
 //endregion
 
 dependencies {
     implementation("org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.14.0")
     implementation(project(":cos.map"))
+    implementation(project(":cos.logging"))
     implementation("io.vertx:vertx-core:3.8.5")
     implementation("io.vertx:vertx-web:3.8.5")
 }
@@ -19,7 +39,12 @@ dependencies {
 
 application {
     mainClassName = "cos.api.Main"
-//    applicationDefaultJvmArgs = listOf("-XX:+PrintGCDetails")
+    applicationDefaultJvmArgs = listOf(
+        //        "-verbose:gc",
+        //                "-verbose:class",
+        "--enable-preview",
+        "-Xmx128m"
+    )
 }
 
 //patchModules.config = listOf(
@@ -27,9 +52,9 @@ application {
 //)
 //
 //(run) {
-////    extensions.configure<ModuleOptions> {
-////        addModules = listOf("java.sql")
-////    }
-////
-////    jvmArgs = listOf("-XX:+PrintGCDetails")
+//    //    extensions.configure<ModuleOptions> {
+//    //        addModules = listOf("java.sql")
+//    //    }
+//    //
+//    //    jvmArgs = listOf("-XX:+PrintGCDetails")
 //}
